--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,6 +21,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install  pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Where am I
+      run: |
+        pwd
     - name: Test with pytest
       run: |
         pytest
