--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Where am I
       run: |
         pwd
+    - name: Install my package
+      run: |
+        pip install -e .
     - name: Test with pytest
       run: |
         pytest
