--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,7 +26,7 @@ jobs:
         pwd
     - name: Install my package
       run: |
-        pip install -e .
+        pip install  .
     - name: Test with pytest
       run: |
         pytest
